--- a/app/views/shared/_mercari_news_html.haml
+++ b/app/views/shared/_mercari_news_html.haml
@@ -1,154 +1,156 @@
-%section.l-chapter-conatainer
-  %h2.l-chapter-head-container 
-    ニュース一覧
-  %ul.news-list
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              9月12日 12:00
-        %h3.
-          【お知らせ】本人確認システムのメンテナンスについて
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              9月10日 8:00
-        %h3.
-          「台風15号」に伴う配送遅延について
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              9月1日 0:00
-        %h3.
-          【重要】キャッシュレス・消費者還元事業開始及びこれに関する特約制約のお知らせ
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              8月20日 12:00
-        %h3.
-          <<出品するだけ>>総額1億円相当還元！メルカリ秋フェスが開催中♪
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              8月15日 18:38
-        %h3.
-          九州地方を中心とした大雨の影響による荷物のお届けについて
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              8月12日 1:00
-        %h3.
-          【重要】メルカリ利用規約及びプライバシーポリシー改訂のお知らせ
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              8月10日 6:07
-        %h3.
-          【追記】【重要】登録済み電話番号の確認をお願いします
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              8月4日 21:00
-        %h3.
-          【注意喚起】メルカリを装ったメールにご注意ください
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              8月3日 5:00
-        %span.news-private
-          個別メッセージ
-        %h3.
-          期間限定￥、売れたら梱包に使える特製ダンボールが無量でもらえます！
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              8月1日 6:00
-        %span.news-private
-          個別メッセージ
-        %h3.
-          売上金の残高があります
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              7月30日 8:00
-        %span.news-private
-          個別メッセージ
-        %h3.
-          Googleログイン通知
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              7月28日 3:00
-        %span.news-private
-          個別メッセージ
-        %h3.
-          【お詫び】<<>メルカリ秋フェス>開催をお知らせする通知について
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              7月15日 7:00
-        %span.news-private
-          個別メッセージ
-        %h3.
-          売上金の残高があります
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              7月13日 20:00
-        %span.news-private
-          個別メッセージ
-        %h3.
-          インタビュー調査のご協力のお願い
-    %li.
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before
-              7月3日 5:00
-        %h3.
-          【復旧済み】【不具合】アプリおよびWebサイトをご利用の一部お客様について不具合が発生しています
-    %li
-      =link_to "#"
-        %time.news-date
-          %i.icon-time
-            \::before 
-              7月1日 9:32
-        %h3. 
-          【お知らせ】【7/1 9:32追記】FamilyMartのFamiポート臨時メンテナンスが完了いたしました
-    %li
-      =link_to "#"
-        %time.news-date
-          %i.icon-time 
-            \::before
-              6月24日 2:02
-        %span
-          個別メッセージ
-        %h3
-          取引キャンセルによるご案内
+%main.l-container.clearfix
+  .l-content
+    %section.l-chapter-conatainer
+      %h2.l-chapter-head-container 
+        ニュース一覧
+      %ul.news-list
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  9月12日 12:00
+            %h3.
+              【お知らせ】本人確認システムのメンテナンスについて
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  9月10日 8:00
+            %h3.
+              「台風15号」に伴う配送遅延について
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  9月1日 0:00
+            %h3.
+              【重要】キャッシュレス・消費者還元事業開始及びこれに関する特約制約のお知らせ
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  8月20日 12:00
+            %h3.
+              <<出品するだけ>>総額1億円相当還元！メルカリ秋フェスが開催中♪
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  8月15日 18:38
+            %h3.
+              九州地方を中心とした大雨の影響による荷物のお届けについて
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  8月12日 1:00
+            %h3.
+              【重要】メルカリ利用規約及びプライバシーポリシー改訂のお知らせ
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  8月10日 6:07
+            %h3.
+              【追記】【重要】登録済み電話番号の確認をお願いします
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  8月4日 21:00
+            %h3.
+              【注意喚起】メルカリを装ったメールにご注意ください
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  8月3日 5:00
+            %span.news-private
+              個別メッセージ
+            %h3.
+              期間限定￥、売れたら梱包に使える特製ダンボールが無量でもらえます！
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  8月1日 6:00
+            %span.news-private
+              個別メッセージ
+            %h3.
+              売上金の残高があります
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  7月30日 8:00
+            %span.news-private
+              個別メッセージ
+            %h3.
+              Googleログイン通知
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  7月28日 3:00
+            %span.news-private
+              個別メッセージ
+            %h3.
+              【お詫び】<<>メルカリ秋フェス>開催をお知らせする通知について
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  7月15日 7:00
+            %span.news-private
+              個別メッセージ
+            %h3.
+              売上金の残高があります
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  7月13日 20:00
+            %span.news-private
+              個別メッセージ
+            %h3.
+              インタビュー調査のご協力のお願い
+        %li.
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before
+                  7月3日 5:00
+            %h3.
+              【復旧済み】【不具合】アプリおよびWebサイトをご利用の一部お客様について不具合が発生しています
+        %li
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time
+                \::before 
+                  7月1日 9:32
+            %h3. 
+              【お知らせ】【7/1 9:32追記】FamilyMartのFamiポート臨時メンテナンスが完了いたしました
+        %li
+          =link_to "#" do
+            %time.news-date
+              %i.icon-time 
+                \::before
+                  6月24日 2:02
+            %span
+              個別メッセージ
+            %h3
+              取引キャンセルによるご案内
