--- a/app/views/shared/_user_evaluation_normal.html.haml
+++ b/app/views/shared/_user_evaluation_normal.html.haml
@@ -6,25 +6,25 @@
       %ul.review-history-tabs
         %li. 
           %h3 
-            =link_to "#"
+            =link_to "#" do
               すべて
         %li. 
           %h3 
-            =link_to "#", data-toggle: "tab"
+            =link_to "#", data-toggle: "tab" do
               %div 
                 %i.icon-normal 
                   \::before 
                 良い
         %li.
           %h3 
-            =link_to "#", data-toggle: "tab"
+            =link_to "#", data-toggle: "tab" do
               %div.active
                 %i.icon-normal
                   \::before 
                 普通
         %li.
           %h3 
-            =link_to "#", data-toggle: "tab"
+            =link_to "#", data-toggle: "tab" do
               %div 
                 %i.icon-bad
                   \::before 
@@ -32,9 +32,9 @@
       .tab-content 
         %ul.mypage-item-list 
           %li
-            =link_to "#", class: mypage-item-link 
+            =link_to "#", class: 'mypage-item-link' do
               %figure
-                = image_tag '/user_image_sample_xx.jpeg', size: "", alt: "" , class: ''
+                = image_tag '/user_image_sample_xx.jpeg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
                 .mypage-item-text 
                   %i.icon-normal 
@@ -50,9 +50,9 @@
                 %i.icon-arrow-right 
                   \::before
           %li
-            =link_to "#", class: mypage-item-link 
+            =link_to "#", class: 'mypage-item-link' do 
               %figure
-                = image_tag '/user_image_sample_xx.jpeg', size: "", alt: "" , class: ''
+                = image_tag '/user_image_sample_xx.jpeg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
                 .mypage-item-text 
                   %i.icon-normal 
@@ -68,9 +68,9 @@
                 %i.icon-arrow-right 
                   \::before
           %li
-            =link_to "#", class: mypage-item-link 
+            =link_to "#", class: 'mypage-item-link' do
               %figure
-                = image_tag '/user_image_sample_xx.jpeg', size: "", alt: "" , class: ''
+                = image_tag '/user_image_sample_xx.jpeg', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body
                 .mypage-item-text 
                   %i.icon-normal 
@@ -79,7 +79,7 @@
                 .mypage-item-text
                   DIV
                 .mypage-item-text 
-                -item-text 
+                .mypage-item-text 
                   %i.icon-time 
                     \::before 
                   2019年8月31日 19:00
@@ -88,10 +88,10 @@
 
     %ul.mypage-history.pager
       %li.pager-prev.pager-cell
-        =link_to "#"
+        =link_to "#" do
           %i.icon-arrow-left 
             \::before
       %li.pager-prev.pager-cell
-        =link_to "#"
+        =link_to "#" do
           %i.icon-arrow-right 
             \::before
