[WIP] apply_scss
#What
 -いいね一覧ページscssの適用
#Why
 -いいね一覧のビューを適切に表示するため

--- a/app/views/shared/_likes_list.html.haml
+++ b/app/views/shared/_likes_list.html.haml
@@ -1,4 +1,4 @@
-%main.l-container.clearfix 
+%main.likes-container.clearfix 
   .default-container 
     .l-content
       %section.l-likes-container
