--- a/app/views/shared/_user_evaluation_all.html.haml
+++ b/app/views/shared/_user_evaluation_all.html.haml
@@ -1,28 +1,32 @@
+.evaluation-all-wrapper
+  =render 'shared/main_page_header'
+
+
 %main.l-container.clearfix
   .l-content
     %section.mypage-tab-container
       %h2.mypage-tab-head
         評価一覧
       %ul.review-history-tabs
-        %li.active
+        %liactive
           %h3
-            =link_to "#", data-toggle.tab do
+            =link_to "#", class:'aa' do
               すべて
-        %li. 
+        %li
           %h3 
             =link_to "#" do
               %div
                 %i.icon-good 
                   \::before
                 良い
-        %li. 
+        %li 
           %h3 
             =link_to "#" do
               %div
                 %i.icon-normal 
                   \::before
                 普通
-        %li. 
+        %li 
           %h3 
             =link_to "#" do
               %div
@@ -163,7 +167,7 @@
               %i.icon-arrow-right 
                 \::before
           %li 
-            =link_to "#", class: "mypage-item-link"
+            =link_to "#", class: "mypage-item-link" do
               %figure 
                 = image_tag '/user_sample_picture_x.png', size: "", alt: "" , class: 'lazyloaded'
               .mypage-item-body 
@@ -201,11 +205,11 @@
               %i.icon-arrow-right 
                 \::before 
     %ul.mypage-history.pager 
-      %li.pager-prev.pager-cell
+      %lipager-prev.pager-cell
         =link_to "#" do
           %i.icon-arrow-left 
             \::before
-      %li.pager-prev.pager-cell
+      %lipager-prev.pager-cell
         =link_to "#" do
           %i.icon-arrow-right 
             \::before
