--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,3 +1,4 @@
 = render 'shared/main_page_header'
-= render 'shared/product-details'
+-# = render 'shared/product-details'
+= render 'tests/test_product-details'
 = render 'shared/footer'
