--- a/app/assets/stylesheets/user_evaluation_all.scss
+++ b/app/assets/stylesheets/user_evaluation_all.scss
@@ -1,39 +1,40 @@
 .evaluation-all-wrapper{
     &__container{
         position: relative;
-        margin: 40px auto 0;
+        margin: 40px auto 40px;
         width: 1020px;
         &__list-contents{
             position: absolute;
-            background-color: lightblue;
+            // background-color: lightblue;
             height: 466px;
             width: 700px;
             top: 0px;
             left: 320px;
             &__tab-head{
                 padding: 0 16px;
-                background: #fff;
+                background-color: #fff;
                 font-size: 16px;
                 line-height: 72px;
                 font-weight: 600;
                 &__tabs{
                     height: 74px;
                     border: 0;
-                    background:#BBBBBB;
-                    font-size: 0;
+                    background-color:#ccc;
                         &__evaluation{
                             box-sizing: border-box;
-                            background: lightblue;
                             height: 100%;
                             width: 25%;
                             display: inline-block;
                             text-align: center;
                             vertical-align: top;
+                            line-height: 70px;
+                            text-decoration: none;
                             #mypage-eva-active{
                                 height: 74px;
-                                background: #fff;
+                                width: 100%;
+                                color: black;
+                                background-color: #fff;
                                 border-top: 2px solid red;
-                                width: 25%;
                                 display: inline-block;
                                 text-align: center;
                                 vertical-align: top;
@@ -41,13 +42,46 @@
                             &__text{
                                 box-sizing: border-box;
                                 height: 100%;
-                                width: 25%;
                                 color: black;
                                 font-weight: 600;
+                                &__inner{
+                                    height: 100%;
+                                    &__laugh-icon{
+                                        color: #ef5185;
+                                    }
+                                    &__normal-icon{
+                                        color: #fba933;
+                                    }
+                                    &__bad-icon{
+                                        color: #6ab5d8;
+                                    }
+                                }
+
                             }
                         }
                     }
 
+                }
+                &__result-content{
+                    width: 700px;
+                    height: 236px;
+                    background-color: #fff;
+                    &__mercari-icon{
+                        position: absolute;
+                        height: 100px;
+                        width: 100px;
+                        top: 200px;
+                        left: 300px;
+                    }
+                    &__right{
+                        position: absolute;
+                        width: 200px;
+                        font-weight: 600;
+                        color: #bbb;
+                        top: 330px;
+                        left: 280px;
+                        
+                    }
                 }
             }
         }
