--- a/app/views/shared/_user_evaluation_all.html.haml
+++ b/app/views/shared/_user_evaluation_all.html.haml
@@ -7,207 +7,30 @@
       %h2.evaluation-all-wrapper__container__list-contents__tab-head
         評価一覧
       %ul.evaluation-all-wrapper__container__list-contents__tab-head__tabs
-        =link_to "#", class:'evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation#mypage-eva-active' do
+        =link_to "#", class:'evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation' do
+          %li.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text#mypage-eva-active
+            .evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text__inner
+              すべて
+
+        =link_to "#", class:'evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation' do
           %li.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text
-            すべて
-        %li.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation
-          %h3 
-            =link_to "#" do
-              %div
-                %i.icon-good 
-                  \::before
-                良い
-        %li.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation 
-          %h3 
-            =link_to "#" do
-              %div
-                %i.icon-normal 
-                  \::before
-                普通
-        %li.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation 
-          %h3 
-            =link_to "#" do
-              %div
-                %i.icon-bad 
-                  \::before
-                悪い
-      .tab-content
-        %ul.mypage-item-list
-          %li
-            =link_to "#", class: 'mypage-list-link' do
-              %figure
-                = image_tag '/user_sample_picture_x.png', size: "", alt: "" , class: 'lazyloaded'
-              .mypage-item-body
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before
-                  購入者
-                .mypage-item-text
-                  DIV
-                .mypage-item-text 
-                .mhypage-item-text 
-                  %i.icon-time 
-                    \::before 
-                  2019年8月31日 19:00
-                %i.icon-arrow-right 
-                  \::before
-          %li 
-            =link_to "#", class: 'mypage-list-link' do
-              %figure
-                = image_tag '/user_sample_picture', size: "", alt: "" , class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before 
-                  購入者    
-                .mypage-item-text 
-                  高橋
-                .maypage-item-text 
-                  ありがとうございます！とても気に入っています。
-                .mypage-item-text
-                  %i.icon-time
-                    \::before 
-                  2019年8月1日 21:04
-                %i.icon-arrow-right 
-                  \::before
-          %li 
-            =link_to "#", class: 'mypage-list-link' do
-              %figure 
-                = image_tag '/user_sample_picture_x.png', size: "", alt: "" , class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before 
-                  出品者
-                .mypage-item-text 
-                  田中
-                .mypage-item-text 
-                  またよろしくお願いします
-                .mypage-item-text 
-                  %i.icon-time 
-                    \::before 
-                  2019年7月13日 15:37
-              %i.icon-arrow-right 
-                \::before
-          %li 
-            =link_to "#", class: 'mypage-list-link' do
-              %figure 
-                = image_tag '/user_sample_picture_x.png', size: "", alt: "" , class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before 
-                  出品者
-                .mypage-item-text 
-                  仲田
-                .mypage-item-text 
-                  またよろしくお願いします！
-                .mypage-item-text 
-                  %i.icon-time 
-                    \::before 
-                  2019年7月11日 12:09
-              %i.icon-arrow-right 
-                \::before
-          %li 
-            =link_to "#", class: 'mypage-list-link' do
-              %figure 
-                = image_tag '/user_sample_picture_x.png', size: "", alt: "" , class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before 
-                  出品者
-                .mypage-item-text 
-                  元木
-                .mypage-item-text 
-                  この度はご購入ありがとうございました
-                .mypage-item-text 
-                  %i.icon-time 
-                    \::before 
-                  2019年6月1日 3:37
-              %i.icon-arrow-right 
-                \::before
-          %li 
-            =link_to "#", class: 'mypage-list-link' do
-              %figure 
-                = image_tag '/user_sample_picture_x.png', size:"", alt:"", class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-bad 
-                    \::before 
-                  出品者
-                .mypage-item-text 
-                  クリッパー
-                .mypage-item-text 
-                .mypage-item-text 
-                  %i.icon-time
-                    \::before 
-                  2019年5月30日 14:22
-              %i.icon-arrow-right 
-                \::before
-          %li 
-            =link_to "#", class: 'mypage-list-link' do
-              %figure 
-                = image_tag '/user_sample_picture_x.png', size: "", alt: "" , class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before 
-                  出品者
-                .mypage-item-text 
-                  田中
-                .mypage-item-text 
-                  またよろしくお願いします
-                .mypage-item-text 
-                  %i.icon-time 
-                    \::before 
-                  2019年5月23日 10:37
-              %i.icon-arrow-right 
-                \::before
-          %li 
-            =link_to "#", class: "mypage-item-link" do
-              %figure 
-                = image_tag '/user_sample_picture_x.png', size: "", alt: "" , class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before 
-                  出品者
-                .mypage-item-text 
-                  仲田
-                .mypage-item-text 
-                  またよろしくお願いします！
-                .mypage-item-text 
-                  %i.icon-time 
-                    \::before 
-                  2019年5月16日 12:09
-              %i.icon-arrow-right 
-                \::before
-          %li
-            =link_to "#", class: 'mypage-list-link' do
-              %figure 
-                = image_tag '/user_sample_picture_x.png', size: "", alt:"", class: 'lazyloaded'
-              .mypage-item-body 
-                .mypage-item-text 
-                  %i.icon-good 
-                    \::before 
-                  購入者
-                .mypage-item-text 
-                  このユーザーは退会済みです
-                .mypage-item-text 
-                  商品を受け取りました。迅速な対応ありがとうございます
-                .mypage-item-text 
-                  %i.icon-time 
-                    \::before 
-                  2016年2月23日
-              %i.icon-arrow-right 
-                \::before 
-    %ul.mypage-history.pager 
-      %lipager-prev.pager-cell
-        =link_to "#" do
-          %i.icon-arrow-left 
-            \::before
-      %lipager-prev.pager-cell
-        =link_to "#" do
-          %i.icon-arrow-right 
-            \::before
+            .evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text__inner
+              良い
+              %i.fas.fa-laugh-squint.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text__inner__laugh-icon
+        =link_to "#", class:'evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation' do
+          %li.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text
+            .evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text__inner
+              普通
+              %i.fas.fa-meh.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text__inner__normal-icon
+        =link_to "#", class:'evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation' do
+          %li.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text
+            .evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text__inner
+              悪い
+              %i.fas.fa-grin-tongue-wink.evaluation-all-wrapper__container__list-contents__tab-head__tabs__evaluation__text__inner__bad-icon
+      .evaluation-all-wrapper__container__list-contents__result-content
+        = image_tag '/mercari-logo-gray.svg' , class: 'evaluation-all-wrapper__container__list-contents__result-content__mercari-icon'
+        .evaluation-all-wrapper__container__list-contents__result-content__right
+          評価はまだありません
+= render 'shared/aside'
+= render 'shared/footer'
+ 
