--- a/app/views/shared/_put_up_goods_on_sale.html.haml
+++ b/app/views/shared/_put_up_goods_on_sale.html.haml
@@ -1,3 +1,6 @@
+= render 'shared/main_page_header'
+= render 'shared/profile-sidebar'
+
 %main.l-container.clearfix
   .l-content
     %section.mypage-tab-container
@@ -6,17 +9,17 @@
       %ul.listing-tabs
         %li.active
           %h3
-            =link_to "#", data-toggle: tab 
+            =link_to "#" do
               出品中
         %li
           %h3
-            =link_to "#"
+            =link_to "#" do
               取引中
-　　　　　%li
+        %li
           %h3
-            =link_to "#"
+            =link_to "#" do
               売却済み
-      %ul#mypage-tab-tansaction-now.mypage-item-list.tab-pane: active   
+      %ul#mypage-tab-tansaction-now__mypage-item-list__tab-pane--active   
         %li
           = link_to "#", class: 'mypage-item-link' do
             %figure
@@ -25,7 +28,6 @@
               .mypage-item-text
                 新品中禅寺湖
             %i.icon-arrow-right 
-              \::before
         %li
           = link_to "#", class: 'mypage-item-link' do
             %figure
@@ -36,18 +38,34 @@
               %div
                 %span.lisiting-item-count
                   %i.icon-like-border
-                    \::before
                   %span
                     5
                 %span.listing-item-count
                   %i.icon-message
-                    \::before
+                  %span
+                    0
+                  .mypage-item-status.bold.awating
+                    出品中   
+            %i.icon-arrow-right    
+        %li
+          = link_to "#", class: 'mypage-item-link' do
+            %figure
+              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
+            .mypage-item-body.show-stock-item
+              .mypage-item-text
+                新品中禅寺湖
+              %div
+                %span.lisiting-item-count
+                  %i.icon-like-border
+                  %span
+                    5
+                %span.listing-item-count
+                  %i.icon-message
                   %span
                     0
                   .mypage-item-status.bold.awating
                     出品中   
             %i.icon-arrow-right 
-              \::before      
         %li
           = link_to "#", class: 'mypage-item-link' do
             %figure
@@ -58,40 +76,15 @@
               %div
                 %span.lisiting-item-count
                   %i.icon-like-border
-                    \::before
-                  %span
-                    5
-                %span.listing-item-count
-                  %i.icon-message
-                    \::before
-                  %span
-                    0
-                  .mypage-item-status.bold.awating
-                    出品中   
-            %i.icon-arrow-right 
-              \::before
-        %li
-          = link_to "#", class: 'mypage-item-link' do
-            %figure
-              = image_tag '/goods_sample_1.jpg', size: "", alt: "" , class: 'lazyloaded'
-            .mypage-item-body.show-stock-item
-              .mypage-item-text
-                新品中禅寺湖
-              %div
-                %span.lisiting-item-count
-                  %i.icon-like-border
-                    \::before
                   %span
                     7
                 %span.listing-item-count
                   %i.icon-message
-                    \::before
                   %span
                     2
                   .mypage-item-status.bold.awating
                     出品中   
             %i.icon-arrow-right 
-              \::before
         %li
           = link_to "#", class: 'mypage-item-link' do
             %figure
@@ -102,18 +95,15 @@
               %div
                 %span.lisiting-item-count
                   %i.icon-like-border
-                    \::before
                   %span
                     3
                 %span.listing-item-count
                   %i.icon-message
-                    \::before
                   %span
                     6
                   .mypage-item-status.bold.awating
                     出品中   
             %i.icon-arrow-right 
-              \::before
         %li
           = link_to "#", class: 'mypage-item-link' do
             %figure
@@ -124,18 +114,15 @@
               %div
                 %span.lisiting-item-count
                   %i.icon-like-border
-                    \::before
                   %span
                     1
                 %span.listing-item-count
                   %i.icon-message
-                    \::before
                   %span
                     0
                   .mypage-item-status.bold.awating
                     出品中   
             %i.icon-arrow-right 
-              \::before
         %li
           = link_to "#", class: 'mypage-item-link' do
             %figure
@@ -146,24 +133,24 @@
               %div
                 %span.lisiting-item-count
                   %i.icon-like-border
-                    \::before
                   %span
                     0
                 %span.listing-item-count
                   %i.icon-message
-                    \::before
                   %span
                     0
                   .mypage-item-status.bold.action-required
                     公開停止中  
             %i.icon-arrow-right 
-              \::before
     %ul.mypage-history.pager
       %li.pager-prev.pager-cell 
         =link_to "#" do
           %i.icon-arrow-left 
-            \::before
       %li.pager-next.pager-cell 
         =link_to "#" do
           %i.icon-arrow-right
-            \::before
+
+= render 'shared/aside'
+= render 'shared/footer'           
+
+
