import scss.file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,5 +6,24 @@
 @import 'signup3';
 @import 'signup2';
 @import 'signup1';
-@import "./main_page_header";
+@import "main_page_header";
 @import "footer";
+@import 'aside';
+@import 'bread-crumbs';
+@import 'credit-register';
+@import 'credit1';
+@import 'devise';
+@import 'exhibit';
+@import 'goods';
+@import 'layouts';
+@import 'login-header';
+@import 'logout';
+@import 'make_sure_user_info';
+@import 'phone-input';
+@import 'products';
+@import 'profile_sidebar';
+@import 'purchase-confirmation';
+@import 'purchase';
+@import 'top_pege_middle';
+@import 'user_evaluation_all'
+
