puchased_model take6
購入画面も商品名と値段、画像DBから引っ張ってきた。

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -34,10 +34,14 @@
         margin: 0 auto;
         position: relative;
         .photo-big {
+          width: 300px;
+          height: 300px;
           position: relative;
           overflow: hidden;
         }
         .photo-small {
+          width: 60px;
+          height: 60px;
           line-height: 0;
         }
       }
