--- a/app/views/shared/_purchase-confirmation.html.haml
+++ b/app/views/shared/_purchase-confirmation.html.haml
@@ -15,14 +15,15 @@
     %section.confirmation-main__container__buy-content
       .confirmation-main__container__buy-content__inner
         %h3.confirmation-main__container__buy-content__inner__item
-          = image_tag '/confirm-test.jpg', size: "", alt: "buy-item-image" , class: 'confirmation-main__container__buy-content__inner__item__image'
+          = image_tag @image.goods_picture, class: 'confirmation-main__container__buy-content__inner__item__image', size: '' if @image.goods_picture.present?
+          -# = image_tag '/confirm-test.jpg', size: "", alt: "buy-item-image" , class: 'confirmation-main__container__buy-content__inner__item__image'
         %p.confirmation-main__container__buy-content__inner__item-name
-          付録：ピーナッツ スヌーピーのおうちと仲間たちチャーリーブラウンの縦型ポーチ
+          = @good.goods_name 
         -# ポイント、支払い金額、購入ボタン
         = form_with(url: '#', class: 'confirmation-main__container__buy-content__inner__buy-form') do |f|
           .confirmation-main__container__buy-content__inner__buy-form__list
             %p.confirmation-main__container__buy-content__inner__buy-form__list__price
-              ¥2,600
+              = @good.price
               %span.confirmation-main__container__buy-content__inner__buy-form__list__price__text
                 送料込み
             %ul.confirmation-main__container__buy-content__inner__buy-form__list__point
@@ -32,7 +33,7 @@
                 .confirmation-main__container__buy-content__inner__buy-form__list__table__list__left-text
                   支払い金額
                 .confirmation-main__container__buy-content__inner__buy-form__list__table__list__right-text
-                  ¥2,600
+                  = @good.price
             =f.submit nil, value: '購入する', class: 'confirmation-main__container__buy-content__inner__buy-form__list btn btn-primary'
     
     -# ユーザー情報、配送先
