--- a/app/views/shared/_purchased_on_deal.html.haml
+++ b/app/views/shared/_purchased_on_deal.html.haml
@@ -1,15 +1,15 @@
 =render 'shared/main_page_header'
 %main.purchased_on_deal.clearfix
   .content
-    %section.mypage-tab-container
-      %h2.mypage-tab-head 
+    %section.container
+      %h2.tab-head 
         購入した商品
       %ul.mypage-tabs
         %li.active
           %h3
             =link_to "#" do
               取引中
-        %li
+        %li.
           %h3 
             =link_to "#" do
               過去の取引
