routing user-signup-view

--- a/app/assets/stylesheets/_phone-input.scss
+++ b/app/assets/stylesheets/_phone-input.scss
@@ -47,7 +47,7 @@
           line-height: 1.5;
           font-size: 14px;
         }
-        button {
+        &__red-btn {
           margin: 24px 0 0;
           background-color: #ea352d;
           color: #fff;
