--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,5 +25,5 @@
 @import 'purchase-confirmation';
 @import 'purchase';
 @import 'top_pege_middle';
-@import 'user_evaluation_all'
+@import 'user_evaluation_all';
 
