--- a/app/assets/stylesheets/_signup2.scss
+++ b/app/assets/stylesheets/_signup2.scss
@@ -29,6 +29,9 @@
     &__title {
       margin-top: 15px;
       font-size: 12px;
+      &__link{
+        text-decoration: none;
+      }
     }
     &__require {
       margin: 0 0 0 8px;
@@ -64,7 +67,7 @@
     &__select {
         border-radius: 5px;
         height: 40px;
-        width: 60px;
+        width: 88px;
         padding: 10px 16px 8px;
         border: 1px solid #ccc;
         background: #fff;
