--- a/app/views/shared/_main_page_header.html.haml
+++ b/app/views/shared/_main_page_header.html.haml
@@ -23,9 +23,9 @@
             %svg.header__under__left__1__1__2{"aria-hidden" => "true", height: "16", viewbox: "0 0 23 16", width: "23"}>
               %path{:d => "M6.315 0L4.473 1.806 2.833.019.73 1.977l1.69 1.84L1.198 5.02c-1.594 1.594-1.594 4.188-.01 5.772L6.3 16h13.272a3.08 3.08 0 0 0 3.077-3.077V3.076A3.08 3.08 0 0 0 19.57 0H6.315zm13.46 12.925a.211.211 0 0 1-.205.205H7.504L3.227 8.771a1.226 1.226 0 0 1-.01-1.71L4.38 5.92l1.28 1.371a2.68 2.68 0 1 0 2.13-1.93L6.433 3.907 7.49 2.87h12.082a.211.211 0 0 1 .206.205v9.848h-.002z", :fill => "currentColor", "fill-rule" => "nonzero"}
             ブランドから探す
-          .header__under__left__1__roll 
+          .header__under__left__1__roll
       .header__under__right
         .header__under__right__1
-          %a.header__under__right__1__1{href: "#"} 新規会員登録
+          %a.header__under__right__1__1{href: tests_signup_path} 新規会員登録
         .header__under__right__2
           %a.header__under__right__2__2{href: "#"} ログイン
