--- a/app/views/shared/_signup2.html.haml
+++ b/app/views/shared/_signup2.html.haml
@@ -1,165 +1,40 @@
-.contents
-  .contents__head
-    会員情報入力
-  .contents__form
-    .contents__form__title1
-      %label ニックネーム
-      %span.contents__form__require 必須
-      %input{ class:"contents__form__input", maxlength:"10", name:"nickname", placeholder:"例）メルカリ太郎", type:"text", value:""}
+-# 他cssとの干渉をさけるため、全体をラップする
+.login-header-wrapper
 
-    .contents__form__title
-      %label メールアドレス
-      %span.contents__form__require 必須
-      %input{ class:"contents__form__input", maxlength:"10", name:"email", placeholder:"PC・携帯どちらでも可", type:"text", value:""}
+  -# ログインページ用ヘッダー
+  = render 'shared/login-header'
 
-    .contents__form__title
-      %label パスワード
-      %span.contents__form__require 必須
-      %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"7文字以上", type:"text", value:""}
-
-    .contents__form__title
-      %label パスワード (確認)
-      %span.contents__form__require 必須
-      %input{ class:"contents__form__input", maxlength:"10", name:"password", placeholder:"7文字以上", type:"text", value:""}
-
-    %form.contents__form__title
-      %h3.contents__message 本人確認
-      %p.contents__message__main 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
-
-    .contents__form__title
-      %label お名前(全角)
-      %span.contents__form__require 必須
-      %div{ style:"display:inline-flex"}
-        %input{ class:"contents__form__input__2", maxlength:"10", name:"first-name", placeholder:"例) 山田", type:"text", value:""}
-        %input{ class:"contents__form__input__2", maxlength:"10", name:"name", placeholder:"例) 彩", type:"text", value:""}
-
-    .contents__form__title
-      %label お名前カナ(全角)
-      %span.contents__form__require 必須
-      %div{ style:"display:inline-flex"}
-        %input{ class:"contents__form__input__2", maxlength:"10", name:"first-name", placeholder:"例) ヤマダ", type:"text", value:""}
-        %input{ class:"contents__form__input__2", maxlength:"10", name:"name", placeholder:"例) アヤ", type:"text", value:""}
-
-    .contents__form__title
-      %label 生年月日
-      %span.contents__form__require 必須
-      %div{ style:"display:inline-flex"}
-        %select{ name:"year", class:"contents__form__select" }
-          %option{value:""} -- 
-          %option{value:"2019"} 2019
-          %option{value:"2018"} 2018
-          %option{value:"2017"} 2017
-          %option{value:"2016"} 2016
-          %option{value:"2015"} 2015
-          %option{value:"2014"} 2014
-          %option{value:"2013"} 2013
-          %option{value:"2012"} 2012
-          %option{value:"2011"} 2011
-          %option{value:"2010"} 2010
-          %option{value:"2009"} 2009
-          %option{value:"2008"} 2008
-          %option{value:"2007"} 2007
-          %option{value:"2006"} 2006
-          %option{value:"2005"} 2005
-          %option{value:"2004"} 2004
-          %option{value:"2003"} 2003
-          %option{value:"2002"} 2002
-          %option{value:"2001"} 2001
-          %option{value:"2000"} 2000
-          %option{value:"1999"} 1999
-          %option{value:"1998"} 1998
-          %option{value:"1997"} 1997
-          %option{value:"1996"} 1996
-          %option{value:"1995"} 1995
-          %option{value:"1994"} 1994
-          %option{value:"1993"} 1993
-          %option{value:"1992"} 1992
-          %option{value:"1991"} 1991
-          %option{value:"1990"} 1990
-          %option{value:"1989"} 1989
-          %option{value:"1988"} 1988
-          %option{value:"1987"} 1987
-          %option{value:"1986"} 1986
-          %option{value:"1985"} 1985
-          %option{value:"1984"} 1984
-          %option{value:"1983"} 1983
-          %option{value:"1982"} 1982
-          %option{value:"1981"} 1981
-          %option{value:"1980"} 1980
-          %option{value:"1979"} 1979
-          %option{value:"1978"} 1978
-          %option{value:"1977"} 1977
-          %option{value:"1976"} 1976
-          %option{value:"1975"} 1975
-          %option{value:"1974"} 1974
-          %option{value:"1973"} 1973
-          %option{value:"1972"} 1972
-          %option{value:"1971"} 1971
-          %option{value:"1970"} 1970           
-        %span 年
-        %select{ name:"month", class:"contents__form__select" }
-          %option{value:""} --
-          %option{value:"1"} 1
-          %option{value:"2"} 2
-          %option{value:"3"} 3
-          %option{value:"4"} 4
-          %option{value:"5"} 5
-          %option{value:"6"} 6
-          %option{value:"7"} 7
-          %option{value:"8"} 8
-          %option{value:"9"} 9
-          %option{value:"10"} 10
-          %option{value:"11"} 11
-          %option{value:"12"} 12
-        %span 月
-        %select{ name:"day", class:"contents__form__select" }
-          %option{value:""} --
-          %option{value:"1"} 1
-          %option{value:"2"} 2
-          %option{value:"3"} 3
-          %option{value:"4"} 4
-          %option{value:"5"} 5
-          %option{value:"6"} 6
-          %option{value:"7"} 7
-          %option{value:"8"} 8
-          %option{value:"9"} 9
-          %option{value:"10"} 10
-          %option{value:"11"} 11
-          %option{value:"12"} 12
-          %option{value:"13"} 13
-          %option{value:"14"} 14
-          %option{value:"15"} 15
-          %option{value:"16"} 16
-          %option{value:"17"} 17
-          %option{value:"18"} 18
-          %option{value:"19"} 19
-          %option{value:"20"} 20
-          %option{value:"21"} 21
-          %option{value:"22"} 22
-          %option{value:"23"} 23
-          %option{value:"24"} 24
-          %option{value:"25"} 25
-          %option{value:"26"} 26
-          %option{value:"27"} 27
-          %option{value:"28"} 28
-          %option{value:"29"} 29
-          %option{value:"30"} 30
-          %option{value:"31"} 31
-        %sapn 日
+  -# 電話番号の入力部分
+  .main
+    %section.main-content
+      %h2.main-content__header
+        電話番号の確認
+      = form_with(url: tests_signup3_path, local: true, method: 'GET') do |f|
+        .form-content
+          .form-group
+            = f.label  "携帯電話の番号"
+            = f.text_field :name, class: "phone-number" , placeholder: '携帯電話の番号を入力'
+          %p 本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
+          = f.button 'SMSを送信する', class: 'form-content__red-btn'
+          %p ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
+          .form-text
+            %a 電話番号の確認が必要な理由
+            %i.fas.fa-chevron-right
       
-      %p.form__info__text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
-    
-    %div
-      %p.contents__message__main2
-        「次へ進む」のボタンを押すことにより、
-        =link_to "aaa", class:"contents__message__main2__link" do
-          利用規約
-        に同意したものとみなします
+    -# ページのフッター部分
+    %footer.confirmation-footer
+      %ul.confirmation-footer-container
+        %li.confirmation-footer-container__list
+          =link_to '#', class: 'confirmation-footer-container__list__info' do
+            プライバシーポリシー
+        %li.confirmation-footer-container__list
+          =link_to '#', class: 'confirmation-footer-container__list__info' do
+            メルカリ利用規約
+        %li.confirmation-footer-container__list
+          =link_to '#', class: 'confirmation-footer-container__list__info' do
+            特定商取引に関する表記
 
-    %button{ type:"submit", class:"contents__btn" } 次に進む
+        = image_tag '/mercari-logo-gray.svg', size: "", alt: "mercari-logo-gray" , class: 'confirmation-footer-container__image'
 
-    .contents__info
-      %p
-        =link_to "sss", class:"contents__info" do
-          本人情報の登録について
-          %i.fas.fa-chevron-right
+      .confirmation-footer-container__footer-text
+        ©︎2019 Mercari
