--- a/app/views/shared/_signup3.html.haml
+++ b/app/views/shared/_signup3.html.haml
@@ -1,88 +1,95 @@
-.login-header-wrapper
-  = render 'shared/login-header'
+.contents
+  .contents__head
+    発送元・お届け先住所入力
+  .contents__form
+  = form_with(url: tests_signup4_path, local: true, method: 'GET' ) do |f|
+    .contents__form__title1
+      %label お名前
+      %span.contents__form__require 必須
+      %input{ class:"contents__form__input", maxlength:"10", name:"nickname", placeholder:"例）山田", type:"text", value:""}
+      %input{ class:"contents__form__input", maxlength:"10", name:"nickname", placeholder:"例）彩", type:"text", value:""}
 
-.signup3-wrapper
-  .contents
-    .contents__head
-      支払い方法
-    = form_with(url: '#' , class: "contents__form") do |f|
-      .contents__form__title1
-        %label カード番号
-        %span.contents__form__require#card-number-require 必須
-        = f.text_field :name, class: "contents__form__input" , placeholder: '半角数字のみ'
-        %ul.contents__form__cardlist
-          %li
-            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2482339763', height: "15", width: "40"
-          %li
-            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/master-card.svg?2482339763', height: "15", width: "40"
-          %li
-            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/saison-card.svg?2482339763', height: "15", width: "25"
-          %li
-            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/jcb.svg?2482339763', height: "15", width: "37"
-          %li
-            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/american_express.svg?2482339763', height: "15", width: "21"
-          %li
-            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?2482339763', height: "15", width: "40"
-          %li
-            = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?2482339763', height: "15", width: "21"
+    .contents__form__title
+      %label お名前カナ
+      %span.contents__form__require 必須
+      %input{ class:"contents__form__input", maxlength:"10", name:"email", placeholder:"例) ヤマダ", type:"text", value:""}
+      %input{ class:"contents__form__input", maxlength:"10", name:"email", placeholder:"例) アヤ", type:"text", value:""}
 
-      .contents__form__title
-        %label 有効期限
-        %span.contents__form__require 必須
-        %div{ style:"display:inline-flex"}
-          %select{ name:"month", class:"contents__form__select contents__form__select__1" }
-            %option{value:""} --
-            %option{value:"01"} 01
-            %option{value:"02"} 02
-            %option{value:"03"} 03
-            %option{value:"04"} 04
-            %option{value:"05"} 05
-            %option{value:"06"} 06
-            %option{value:"07"} 07
-            %option{value:"08"} 08
-            %option{value:"09"} 09
-            %option{value:"10"} 10
-            %option{value:"11"} 11
-            %option{value:"12"} 12
-          %span 月
-          %select{ name:"day", class:"contents__form__select" }
-            %option{value:""} --
-            %option{value:"19"} 19
-            %option{value:"20"} 20
-            %option{value:"21"} 21
-            %option{value:"22"} 22
-            %option{value:"23"} 23
-            %option{value:"24"} 24
-            %option{value:"25"} 25
-            %option{value:"26"} 26
-            %option{value:"27"} 27
-            %option{value:"28"} 28
-            %option{value:"29"} 29
-          %sapn 年
+    .contents__form__title
+      %label 郵便番号
+      %span.contents__form__require 必須
+      %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"例) 123-4567", type:"text", value:""}
 
-      .contents__form__title
-        %label セキュリティコード
-        %span.contents__form__require 必須
-        %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
-      .contents__info
-        %span.contents__info__question ？
-        %span カード裏面の番号とは？
-      
-      %button{ type:"submit", class:"contents__btn" } 次に進む
-      -# ページのフッター部分
-  %footer.confirmation-footer
-    %ul.confirmation-footer-container
-      %li.confirmation-footer-container__list
-        =link_to '#', class: 'confirmation-footer-container__list__info' do
-          プライバシーポリシー
-      %li.confirmation-footer-container__list
-        =link_to '#', class: 'confirmation-footer-container__list__info' do
-          メルカリ利用規約
-      %li.confirmation-footer-container__list
-        =link_to '#', class: 'confirmation-footer-container__list__info' do
-          特定商取引に関する表記
+    .contents__form__title
+      %label 都道府県
+      %span.contents__form__require 必須
+      %select{ name:"year", class:"contents__form__select" }
+        %option{value:"北海道"} 北海道
+        %option{value:"青森県"} 青森県
+        %option{value:"岩手県"} 岩手県
+        %option{value:"宮城県"} 宮城県
+        %option{value:"秋田県"} 秋田県
+        %option{value:"山形県"} 山形県
+        %option{value:"福島県"} 福島県
+        %option{value:"茨城県"} 茨城県
+        %option{value:"栃木県"} 栃木県
+        %option{value:"群馬県"} 群馬県
+        %option{value:"埼玉県"} 埼玉県
+        %option{value:"千葉県"} 千葉県
+        %option{value:"東京都"} 東京都
+        %option{value:"神奈川県"} 神奈川県
+        %option{value:"新潟県"} 新潟県
+        %option{value:"富山県"} 富山県
+        %option{value:"石川県"} 石川県
+        %option{value:"福井県"} 福井県
+        %option{value:"山梨県"} 山梨県
+        %option{value:"長野県"} 長野県
+        %option{value:"岐阜県"} 岐阜県
+        %option{value:"静岡県"} 静岡県
+        %option{value:"愛知県"} 愛知県
+        %option{value:"三重県"} 三重県
+        %option{value:"滋賀県"} 滋賀県
+        %option{value:"京都府"} 京都府
+        %option{value:"大阪府"} 大阪府
+        %option{value:"兵庫県"} 兵庫県
+        %option{value:"奈良県"} 奈良県
+        %option{value:"和歌山県"} 和歌山県
+        %option{value:"鳥取県"} 鳥取県
+        %option{value:"島根県"} 島根県
+        %option{value:"岡山県"} 岡山県
+        %option{value:"広島県"} 広島県
+        %option{value:"山口県"} 山口県
+        %option{value:"徳島県"} 徳島県
+        %option{value:"香川県"} 香川県
+        %option{value:"愛媛県"} 愛媛県
+        %option{value:"高知県"} 高知県
+        %option{value:"福岡県"} 福岡県
+        %option{value:"佐賀県"} 佐賀県
+        %option{value:"長崎県"} 長崎県
+        %option{value:"熊本県"} 熊本県
+        %option{value:"大分県"} 大分県
+        %option{value:"宮崎県"} 宮崎県
+        %option{value:"鹿児島県"} 鹿児島県
+        %option{value:"沖縄県"} 沖縄県
 
-      = image_tag '/mercari-logo-gray.svg', size: "", alt: "mercari-logo-gray" , class: 'confirmation-footer-container__image'
+    .contents__form__title
+      %label 市区町村
+      %span.contents__form__require 必須
+      %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"例) 横浜市緑区", type:"text", value:""}
 
-    .confirmation-footer-container__footer-text
-      ©︎2019 Mercari
+    .contents__form__title
+      %label 番地
+      %span.contents__form__require 必須
+      %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"例) 青山1-1-1", type:"text", value:""}
+
+    .contents__form__title
+      %label 建物名
+      %span.contents__form__require__2 任意
+      %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"例) 柳ビル103", type:"text", value:""}
+
+    .contents__form__title
+      %label 電話
+      %span.contents__form__require__2 任意
+      %input{ class:"contents__form__input", maxlength:"7", name:"password", placeholder:"例) 09012345678", type:"text", value:""}
+  
+    =f.button '次に進む',class: 'contents__form__btn'
